# wsmwayland

./: CMakeLists.txt  README.md
.github/workflows/: archlinux-build.yaml  cmake.yml  cppcheck.yml  debian-build.yaml
doc/: Doxyfile.in
examples/: CMakeLists.txt
examples/dpmsexample/: CMakeLists.txt  Main.qml  main.cpp
src/: CMakeLists.txt  abstractresource.cpp  abstractresource.h  abstractresource_p.h  outputpowermanagement.cpp  outputpowermanagement.h  outputpowermanagement_p.h  wsmwaylandglobal.cpp  wsmwaylandglobal.h
